--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:wght@100;200;400;500;600;700;800;900&display=swap');
 :root {
-  --font-principal: 'Fira Sans';
+  --font-principal: 'Fira Sans Extra Condensed', sans-serif;
+  --cor-verde: #3d604c;
 }
 
 * {
@@ -9,40 +10,55 @@
 }
 
 body {
-  font-family: var(--font-principal), sans-serif;
-}
-
-.carousel {
+  font-family: var(--font-principal);
   width: 100%;
-  max-height: 100%;
-  top: 0;
-  margin: 0 auto;
+  padding: 20px 150px;
 }
-.carousel img {
-  width: 100%;
-  height: 100%;
+h3 {
+  font-size: 20px;
+  margin-bottom: 20px;
 }
-
-.slide {
-  position: relative;
+p {
+  font-size: 16px;
+  line-height: 1.3rem;
+  -webkit-margin-after: 1em;
 }
-
-.slide span {
-  position: absolute;
-  width: 350px;
-  top: 50px;
-  margin-left: 190px;
-  padding: 10px;
-
-  font-size: 1vw;
-  font-weight: 300;
-  line-height: 1.5em;
+a.btn {
+  width: 200px;
+  padding: 5px 10px;
   color: #fff;
-  background: rgba(0, 0, 0, 0.8);
-  border-radius: 5px;
+  font-weight: 300;
+  font-size: 18px;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  background-color: #000;
+  border: 1px solid #000;
 
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  -webkit-transition: all 300ms ease;
-  transition: all 300ms ease;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+a.btn:hover {
+  background-color: #fff;
+  color: #000;
+}
+
+/* página > início*/
+.sobre {
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+}
+img.inicio {
+  width: 650px;
+  margin-right: 30px;
+}
+div.paragrafo-inicio {
+  width: 700px;
+}
+div.btn-inicio {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 60px;
 }
