--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:wght@100;200;400;500;600;700;800;900&display=swap');
 :root {
-  --font-principal: 'Fira Sans Extra Condensed', sans-serif;
+  --font-padrao: 'Fira Sans Extra Condensed', sans-serif;
+  --padding-padrao: 20px 150px;
   --cor-verde: #3d604c;
 }
-
 * {
   margin: 0;
   padding: 0;
 }
-
 body {
-  font-family: var(--font-principal);
+  font-family: var(--font-padrao);
   width: 100%;
-  padding: 20px 150px;
+  background-color: #fff;
 }
 h3 {
   font-size: 20px;
@@ -48,6 +47,7 @@ a.btn:hover {
   width: 100%;
   display: flex;
   align-items: flex-end;
+  padding: var(--padding-padrao);
 }
 img.inicio {
   width: 650px;
