--- a/semanadecinemanegro/css/main.css
+++ b/semanadecinemanegro/css/main.css
@@ -1,8 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:wght@100;200;400;500;600;700;800;900&display=swap');
+
 :root {
   --font-padrao: 'Fira Sans Extra Condensed', sans-serif;
   --padding-padrao: 20px 0;
+  --rmargin-padrao: 30px;
   --cor-verde: #3d604c;
+  --cor-cinza-padrao: #e6e6e6;
+  --cor-cinza: #ccc;
+  --cor-cinza-escuro: #3b3b3b;
+}
+*:focus {
+  outline: none;
 }
 * {
   margin: 0;
@@ -44,17 +52,103 @@ a.btn:hover {
 .flex-end {
   align-items: flex-end;
 }
-
-/* página > início*/
 .container {
   width: 100%;
   display: flex;
   justify-content: center;
   padding: var(--padding-padrao);
 }
+
+/* bloco: filmes */
+div.filmeBox {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  width: 80%;
+  border-radius: 10px;
+  font-weight: 600;
+  text-transform: uppercase;
+
+  box-shadow: 0 0 4px 4px rgba(0, 0, 0, 0.05);
+  transition: 0.3s;
+}
+div.filmeImg {
+  width: 350px;
+  height: 100%;
+  border-radius: 5px;
+  margin-right: var(--rmargin-padrao);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.filmeInfo > h1 {
+  font-size: 20px;
+}
+.filmeInfo > h2 {
+  font-size: 16px;
+}
+.filmeInfo > h3 {
+  font-size: 14px;
+  font-weight: 500;
+  color: var(--cor-cinza-escuro);
+}
+.filmeInfo > p {
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: none;
+}
+div.btn-filmes {
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+.collapsible,
+.content {
+  width: 500px;
+  border-radius: 5px;
+}
+
+.collapsible {
+  font-family: var(--font-padrao);
+  padding: 5px 10px;
+  color: #000;
+  font-weight: 400;
+  font-size: 18px;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  background-color: var(--cor-cinza-padrao);
+  border: 1px solid var(--cor-cinza-padrao);
+
+  transition: 0.3s;
+}
+.active,
+.collapsible:hover {
+  background-color: var(--cor-cinza);
+}
+.content {
+  display: none;
+  overflow: hidden;
+  background-color: var(--cor-cinza-padrao);
+  margin-top: 5px;
+}
+.content > ul li {
+  font-size: 16px;
+  font-weight: 300;
+  padding: 5px 10px;
+  line-height: 1.3rem;
+  text-transform: none;
+  list-style-type: none;
+}
+.content > ul li:last-child {
+  margin-top: 5px;
+  font-weight: 400;
+}
+/* página > início*/
 img.inicio {
   width: 650px;
-  margin-right: 30px;
+  margin-right: var(--rmargin-padrao);
 }
 div.paragrafo-inicio {
   width: 700px;
