--- a/semanadecinemanegro/css/main.css
+++ b/semanadecinemanegro/css/main.css
@@ -81,6 +81,9 @@ div.filmeImg {
   background-repeat: no-repeat;
   background-size: cover;
 }
+div.filmeInfo {
+  width: 100%;
+}
 .filmeInfo > h1 {
   font-size: 20px;
 }
@@ -97,10 +100,11 @@ div.filmeImg {
   font-weight: 400;
   text-transform: none;
 }
+
 div.btn-filmes {
   display: flex;
   align-items: start;
-  justify-content: space-between;
+  justify-content: start;
   margin-top: 50px;
 }
 .collapsible,
@@ -108,10 +112,8 @@ div.btn-filmes {
   width: 500px;
   border-radius: 5px;
 }
-
 .collapsible {
   font-family: var(--font-padrao);
-  padding: 5px 10px;
   color: #000;
   font-weight: 400;
   font-size: 18px;
@@ -120,6 +122,8 @@ div.btn-filmes {
   text-decoration: none;
   background-color: var(--cor-cinza-padrao);
   border: 1px solid var(--cor-cinza-padrao);
+  padding: 5px 10px;
+  margin-right: 15px;
 
   transition: 0.3s;
 }
@@ -145,6 +149,16 @@ div.btn-filmes {
   margin-top: 5px;
   font-weight: 400;
 }
+i.fas {
+  font-size: 20px;
+}
+i.fa-chevron-down {
+  color: #000;
+}
+i.fa-external-link-alt {
+  color: #fff;
+}
+
 /* página > início*/
 img.inicio {
   width: 650px;
