--- a/semanadecinemanegro/css/main.css
+++ b/semanadecinemanegro/css/main.css
@@ -176,6 +176,26 @@ p {
   -webkit-transform: rotate(45deg) translate(-8px, -8px);
   transform: rotate(45deg) translate(-8px, -8px);
 }
+/*  MENU DROPDOWN   */
+.container .navbar .dropdown {
+  overflow: hidden;
+  float: left;
+}
+.container .navbar .dropdown .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.container .navbar .dropdown .dropdown-content li a {
+  height: 30px;
+  line-height: 35px;
+}
+.container .navbar .dropdown:hover .dropdown-content {
+  display: block;
+}
 
 a.btn {
   width: 200px;
