--- a/semanadecinemanegro/css/main.css
+++ b/semanadecinemanegro/css/main.css
@@ -61,6 +61,7 @@ p {
 .header {
   display: flex !important;
   justify-content: space-between !important;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 .container .logo-menu a {
   display: -webkit-box;
