--- a/semanadecinemanegro/css/main.css
+++ b/semanadecinemanegro/css/main.css
@@ -466,6 +466,29 @@ div.debateInfo {
   font-weight: 400;
 }
 
+/* bloco: download */
+
+.dowloadContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 3em 10em;
+}
+
+.pdfCover {
+  width: 270px;
+  height: 350px;
+  background-color: var(--cor-laranja);
+  border-radius: 5px;
+  margin: 20px;
+}
+.dowloadContainer > p {
+  width: 100%;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+}
+
 /* bloco: banner-title */
 .mainBanner {
   display: flex;
