--- a/semanadecinemanegro/css/main.css
+++ b/semanadecinemanegro/css/main.css
@@ -505,8 +505,12 @@ div.debateInfo {
   align-items: baseline;
   padding-bottom: 50px;
   text-transform: uppercase;
-  font-size: 26px;
+  font-size: 24px;
   font-weight: 600;
+}
+
+.mainInfo > .creditos {
+  padding-bottom: 0;
 }
 
 .title > svg {
@@ -541,8 +545,6 @@ div.btn-inicio {
   justify-content: space-between;
   margin-top: 60px;
 }
-
-
 
 /* FOOTER  */
 #footer {
