still dos filmes e os cards da sessão de abertura

--- a/semanadecinemanegro/css/screen.css
+++ b/semanadecinemanegro/css/screen.css
@@ -48,8 +48,8 @@
   }
   div.filmeImg,
   div.postInfo {
-    width: 100%;
-    margin-right: 0;
+    width: 100% !important;
+    margin-right: 0 !important;
   }
   .postInfo > h2 {
     margin-bottom: 0;
