--- a/semanadecinemanegro/css/main.css
+++ b/semanadecinemanegro/css/main.css
@@ -341,7 +341,7 @@ div.postImg {
 /* bloco: filmes */
 .postBox > div.filmeImg {
   width: 600px;
-  height: 250px; /*TENTAR FAZER COM QUE FIQUE 100%*/
+  align-self: stretch;
   border-radius: 5px;
   margin-right: var(--rmargin-padrao);
 }
