--- a/semanadecinemanegro/css/main.css
+++ b/semanadecinemanegro/css/main.css
@@ -299,6 +299,15 @@ a.btn:hover {
   align-items: center;
 }
 
+.sessionTitle {
+  display: flex;
+  justify-content: start;
+  padding-bottom: 2rem;
+  text-transform: uppercase;
+  font-size: 24px;
+  font-weight: 600;
+}
+
 div.postBox {
   display: flex;
   align-items: center;
