--- a/semanadecinemanegro/css/main.css
+++ b/semanadecinemanegro/css/main.css
@@ -597,82 +597,115 @@ div.btn-inicio .btn {
   margin-left: 20px;
 }
 /* FOOTER  */
-#footer {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 250px;
-  background-color: #000;
-  position: relative;
-  bottom: 0;
-}
-#footer .logo-footer {
-  margin: 0 50px;
+footer{
+	position: relative;
+	bottom: 0;
 }
 
-#footer .logo-footer img {
-  width: 125px;
-  height: auto;
-}
-#footer .contain {
+.footer-distributed{
+	background-color: #000;
+	box-sizing: border-box;
+	width: 100%;
+	text-align: left;
+	padding: 60px 0;
+	margin-top: 80px;
   display: flex;
-  align-items: center;
-  width: 100%;
-  justify-content: space-around;
-}
-#footer .col {
-  width: 190px;
-  height: auto;
-  float: left;
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  padding: 0px 20px 20px 20px;
-  border-right: 1px solid #fff;
-}
-#footer .abertura {
-  width: 500px;
+  justify-content: space-evenly;
 }
 
-#footer .col ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-#footer .col ul li a {
+.footer-distributed .footer-left ul li a,
+.footer-distributed .footer-center ul li a {
   font-family: var(--font-padrao);
-  font-weight: lighter;
-  color: var(--cor-cinza-claro);
-  text-transform: uppercase;
-  font-size: 17px;
-  line-height: 2;
-  font-family: inherit;
-  padding: 5px 0px 5px 0px;
-  cursor: pointer;
-  transition: 0.2s;
-  -webkit-transition: 0.2s;
-  -moz-transition: 0.2s;
   text-decoration: none;
+  text-transform: uppercase;
+  font-size: 15px;
+  color: var(--cor-cinza-menu);
+  line-height: 1.5em;
 }
-#footer .description {
-  width: 600px;
+.footer-distributed .footer-left ul li a:hover,
+.footer-distributed .footer-center ul li a:hover {
   color: #fff;
 }
-#footer .description p {
-  margin-top: 35px;
+
+/* Footer left */
+
+.footer-distributed .footer-left{
+	width: 35%;
+  display: flex;
+  border-right: 1px solid #fff;
 }
-#footer .social-media {
-  border: none;
+
+.footer-distributed h3{
+	color:  #ffffff;
+	font: normal 36px 'Cookie', cursive;
+	margin: 0;
 }
-#footer .social-media ul li {
-  display: inline-block;
-  padding-right: 5px !important;
+
+/* The company logo */
+
+.footer-distributed .footer-left img{
+	width: 50%;
 }
-#footer .social-media .fab {
-  font-size: 30px;
+
+/* Footer links */
+
+.footer-distributed .footer-links{
+	color:  #ffffff;
+	margin: 20px 0 12px;
 }
-.clearfix {
-  clear: both;
+
+.footer-distributed .footer-links a{
+	display:inline-block;
+	line-height: 1.8;
+	text-decoration: none;
+	color:  inherit;
+}
+
+/* Footer Center */
+
+.footer-distributed .footer-center{
+	width: 10%;
+  border-right: 1px solid #fff;
+  display: flex;
+}
+
+.footer-distributed .footer-center p{
+	display: inline-block;
+	color: #ffffff;
+	vertical-align: middle;
+	margin:0;
+}
+
+/* Footer Right */
+.footer-distributed .footer-right{
+	width: 30%;
+  display: flex;
+}
+
+.footer-distributed .footer-about{
+	line-height: 20px;
+	color:  #fff;
+	font-size: 13px;
+  font-family: var(--font-padrao);
+	font-weight: normal;
+}
+.footer-distributed .footer-icons{
+	margin-top: 25px;
+  display: flex;
+}
+
+.footer-distributed .footer-icons a{
+	display: inline-block;
+	width: 35px;
+	height: 35px;
+	cursor: pointer;
+	font-size: 20px;
+	color: #ffffff;
+	text-align: center;
+	line-height: 35px;
+}
+.border {
+  border-left: 1px solid #fff;
 }
 .patrocinio {
   background-color: var(--cor-cinza-padrao);
