--- a/semanadecinemanegro/css/screen.css
+++ b/semanadecinemanegro/css/screen.css
@@ -75,24 +75,12 @@
 }
 @media (max-height:800px){
 	footer { position: static; }
-	header { padding-top:40px; }
 }
 /* Here is the code for Responsive Footer */
 /* You can remove below code if you don't want Footer to be responsive */
 
-@media (max-width: 880px) {
-
-	.footer-distributed .footer-left,
-	.footer-distributed .footer-center,
-	.footer-distributed .footer-right{
-		display: flex;
-		width: 100%;
-		margin-bottom: 40px;
-		text-align: center;
-	}
-
-	.footer-distributed .footer-center i{
-		margin-left: 0;
-	}
-
+@media screen and (max-width: 1440px) {
+  .footer-distributed .footer-left {
+    width: 40%;
+  }
 }
