--- a/semanadecinemanegro/css/main.css
+++ b/semanadecinemanegro/css/main.css
@@ -481,7 +481,6 @@ div.debateContainer {
   height: 100%;
   display: flex;
   flex-direction: column;
-  margin-bottom: 3rem;
   border-radius: 10px;
   border-radius: 0 0 10px 10px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.05);
@@ -515,6 +514,11 @@ div.debateInfo {
   align-items: center;
   list-style: none;
   margin: 0.5rem;
+}
+
+.debateInfo ul li p {
+  margin: 0;
+  font-weight: 500;
 }
 
 .debateInfo ul li .debate-btn {
@@ -712,6 +716,7 @@ footer {
   display: flex;
   align-items: center;
   padding: 20px 0;
+  margin-top: 20px;
 }
 .patrocinio img {
   width: 100%;
